--- a/src/style/viriables.scss
+++ b/src/style/viriables.scss
@@ -1,3 +1,5 @@
 $conntent-font-color: #333;
 $conntent-bgcolor: #F1F1F1;
 $content-notice-fontcolor:#777;
+$search-bgColor: #F5F5F5;
+$content-fontColor: #B7B7B7
