--- a/src/style/viriables.scss
+++ b/src/style/viriables.scss
@@ -2,4 +2,9 @@ $conntent-font-color: #333;
 $conntent-bgcolor: #F1F1F1;
 $content-notice-fontcolor:#777;
 $search-bgColor: #F5F5F5;
-$content-fontColor: #B7B7B7
+$content-fontColor: #B7B7B7;
+$ligh-fontColor: #999;
+$medium-fontColor: #666;
+$highlight-fontColor: #E93B3B;
+$bgColor: #FFF;
+$button-color: #0091FF;
